--- a/app/src/main/res/layout/fragment_apps_list.xml
+++ b/app/src/main/res/layout/fragment_apps_list.xml
@@ -3,4 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.AppsListFragment"/>
+    tools:context=".fragments.AppsListFragment">
+
+    <ListView
+        android:id="@+id/listListListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</FrameLayout>
